deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <deployment-name>
  namespace: <namespace>
  annotations:
    reloader.stakater.com/auto : "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: <app-label>
  template:
    metadata:
      labels:
        app: <app-label>
    spec:
      containers:
        - name: <container-name>
          image: <image-url>
          imagePullPolicy: Always
          ports:
            - containerPort: <Port>
