deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <service-name>
  namespace: <namespace>
spec:
  selector:
    app: <app-label>
  ports:
    - port: 80
      protocol: TCP
      targetPort: <target-port>
  type: ClusterIP
