deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <ingress-name>
  namespace: <namespace>
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: <alb name>
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: <cert-arn>
    alb.ingress.kubernetes.io/group.name: <shared-group-name>
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.order: "1"
    alb.ingress.kubernetes.io/actions.ssl-redirect: >
       {"Type": "redirect", "RedirectConfig": {
        "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"
       }}
spec:
  rules:
    
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation

    - host: <domain-name>
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: <service-name>
                port:
                  number: 80
